# jris5252

./: .gitignore  .replit  TODO  assembler.py  jris.txt  main.py  out.jris.py  pyproject.toml  readme.md  test.s
addon/: README.txt  breakpoints.py  corrupter.py  cryptography.py  dontstop.py  example (copy).py  mal.py  random.py  randomizerom.py
programs/: hello.jris.py  largeinttest.jris.py  print every charater.jris.py  random.jris.py  test.jris.py  userexeccode.jris.py
