[tool.poetry]
name = "jris5252"
version = "2"
description = "Jasedxyz's Reduced Instruction Set CPU 5252"
authors = ["Jase Williams <jased@jased.xyz>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
getkey = "^0.6.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"